force-app/main/default/objects/Certificacion_detalle__c/Certificacion_detalle__c.object-meta.xml
<CustomObject>
    <label>Certificacion detalle</label>
    <nameField>
        <label>Nombre de certificacion_detalle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificacion detalles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>