force-app/main/default/objects/Certificacion_detalle__c/fields/certificacion__c.field-meta.xml
<CustomField>
    <fullName>certificacion__c</fullName>
    <label>certificacion</label>
    <referenceTo>Certificacion__c</referenceTo>
    <relationshipName>certificacion_detalles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>