force-app/main/default/objects/Certificacion_detalle__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concepto</label>
    <referenceTo>Concepto__c</referenceTo>
    <relationshipLabel>Certificacion detalles</relationshipLabel>
    <relationshipName>Certificacion_detalles</relationshipName>
    <type>Lookup</type>
</CustomField>