force-app/main/default/objects/Certificacion_detalle__c/fields/Importe_unitario__c.field-meta.xml
<CustomField>
    <fullName>Importe_unitario__c</fullName>
    <label>Valor unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>