force-app/main/default/objects/Certificacion_detalle__c/fields/Orden_de_compra_detalle__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra_detalle__c</fullName>
    <label>Orden de compra detalle</label>
    <referenceTo>Orden_de_compra_entrega__c</referenceTo>
    <relationshipLabel>Certificacion detalles</relationshipLabel>
    <relationshipName>certificacion_detalles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>