force-app/main/default/objects/Certificacion_detalle__c/fields/Porcentaje_avance_total__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_avance_total__c</fullName>
    <label>Porcentaje avance total</label>
    <precision>17</precision>
    <scale>12</scale>
    <type>Percent</type>
</CustomField>