force-app/main/default/objects/Certificacion_detalle__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubro</label>
    <referenceTo>Rubro__c</referenceTo>
    <relationshipLabel>Certificacion detalles</relationshipLabel>
    <relationshipName>Certificacion_detalles</relationshipName>
    <type>Lookup</type>
</CustomField>