force-app/main/default/objects/Certificacion_detalle__c/fields/Valor_acumulado_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_acumulado_total__c</fullName>
    <label>Valor acumulado total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>